--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.replace("https://www.google.com");
+        window.location.replace("86.172.206.193");
     </script>
 </body>
 </html>
